fix: adjust character limit input visibility and refine styling

--- a/style.css
+++ b/style.css
@@ -162,11 +162,12 @@ textarea{
     align-items: center;
 }
 
+
+
 .card__options-group {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 1rem;
 }
 
 .card__option--exclude, .card__option--character {
@@ -182,16 +183,14 @@ textarea{
 }
 
 
-.card__option--character .card__limit{
-
+.card__limit{
     background-color: var(--textfield-bg);
     border-radius: 5px;
     margin-left: 1rem;
     border: 1px solid var(--textfield-border);
     color: var(--textfield-placeholder);
-    padding: 12px;
-    height: 10px;
-
+    padding: 10px;
+    height: 12px;
     width: 55px;
 }
 
